--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,7 @@ button {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  color: var(--main-text-color);
 }
 
 .portfolio-list-description {
